# ollama-rag-webapp

./: .gitignore  LICENSE  docker-compose.yml  main.py  pyproject.toml
src/: config.py  data_analyze.py  data_loader.py  evaluation.py  generator.py  retriever.py  test.py
