[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beir>=2.2.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.3",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.2.0",
    "httpx>=0.27.0",
    "ollama>=0.6.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "isort>=7.0.0",
]
